--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </div>
           </div>
           <div>
-            <img src="./img/imagenMujerConPc.svg" alt="imagenMujerConPc">
+            <img class="imagen-section-inicio" src="./img/imagenMujerConPc.svg" alt="imagenMujerConPc">
           </div>
         </div>
         </div>
@@ -139,7 +139,7 @@
           <button>#CSS</button>
           <button>#JavaScript</button>
           <button>#Figma</button>
-          <div class="imagen-section">
+          <div class="imagen-section-proyectos">
             <img src="./img/simulacion-1.svg" alt="simulacion-1">
           </div>
         </div>
