cambios en section inicio

--- a/index.html
+++ b/index.html
@@ -49,30 +49,31 @@
     <main>
       <section id="inicio" class="section-inicio">
         <div class="wrapper">
+          <div>
+            <img class="imagen-section-inicio" src="./img/imagenMujerConPc.svg" alt="imagenMujerConPc">
+          </div>
           <div class="main-section-inicio-content">
-            <h1 class="section-inicio-title">Hola, soy Maribel</h1>
+            <h1 class="section-inicio-title">Hola, soy <span>Maribel</span></h1>
             <div>
-              <h2>Desarrolladora Front End</h2>
+              <h2>Desarrolladora <span>Front End</span></h2>
             </div>
             <div>
-              <h2>UI Designer</h2>
+              <h2> <span>UI</span> Designer</h2>
             </div>
             <div>
-              <h2>Diseñadora Gráfica</h2>
+              <h2>Diseñadora <span>Gráfica</span></h2>
             </div>
             <p class="section-inicio-description">
               Me especializo en crear experiencias digitales atractivas y funcionales, uniendo diseño y tecnología en
               proyectos de diseño web.</p>
             <div class="buttons">
-              <a href="#">FIGMA<img src="" alt=""></a>
-              <a href="#">GITHUB<img src="" alt=""></a>
-              <a href="#">BEHANCE<img src="" alt=""></a>
-              <a href="#">MAIL<img src="" alt=""></a>
+              <img src="./img/logo-figma.negro.svg" alt="logo-figma">
+              <img src="./img/logoGithub.svg" alt="logo-github">
+              <img src="./img/logoBehance.svg" alt="logo-behance">
+              <img src="./img/logoMail.svg" alt="mail">
             </div>
           </div>
-          <div>
-            <img class="imagen-section-inicio" src="./img/imagenMujerConPc.svg" alt="imagenMujerConPc">
-          </div>
+
         </div>
         </div>
       </section>
@@ -139,9 +140,9 @@
           <button>#CSS</button>
           <button>#JavaScript</button>
           <button>#Figma</button>
-          <div class="imagen-section-proyectos">
+          <!-- <div class="imagen-section-proyectos">
             <img src="./img/simulacion-1.svg" alt="simulacion-1">
-          </div>
+          </div> -->
         </div>
         
     <section class="section-sobre-mi">
