cambios en section proyectos

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     </header>
 
     <main>
+      <div class="wrapper">
       <section id="inicio" class="section-inicio">
-        <div class="wrapper">
           <div>
             <img class="imagen-section-inicio" src="./img/imagenMujerConPc.svg" alt="imagenMujerConPc">
           </div>
@@ -73,9 +73,8 @@
               <img src="./img/logoMail.svg" alt="mail">
             </div>
           </div>
-
         </div>
-        </div>
+      </div>
       </section>
 
       <section class="section-skills">
@@ -108,8 +107,8 @@
             <span>Git</span>
           </div>
   
-          <div class="aprendiendo">
-            <h2>Aprendiendo</h2>
+          <h2>Aprendiendo:</h2>
+
             <div class="skill">
               <img src="./img/logo-react-negro.svg" alt="React logo">
               <span>React</span>
@@ -125,7 +124,6 @@
               <span>Tailwind</span>
             </div>
           </div>
-        </div>
       </section>
 
       <section class="section-proyectos">
@@ -140,9 +138,9 @@
           <button>#CSS</button>
           <button>#JavaScript</button>
           <button>#Figma</button>
-          <!-- <div class="imagen-section-proyectos">
+          <div class="imagen-section-proyectos">
             <img src="./img/simulacion-1.svg" alt="simulacion-1">
-          </div> -->
+          </div>
         </div>
         
     <section class="section-sobre-mi">
