cambios section proyectos

--- a/index.html
+++ b/index.html
@@ -128,19 +128,35 @@
 
       <section class="section-proyectos">
         <h1>Proyectos</h1>
+        <div class="content-buttons">
         <button>Desarrollo Front End</button>
         <button>Diseño Gráfico</button>
         <button>UI Design</button>
+      </div>
         <div class="section-proyectos-content">
-          <h1>Landing Page - Agencia de Diseño</h1>
+          <div>
+            <img src="./img/simulacion-1.svg" alt="simulacion-1">
+          </div>
+          <div class="content-info">
+          <h3>Landing Page - Agencia de Diseño</h3>
           <p>Página web desarrollada como práctica de diseño y funcionalidad. Usando una plantilla de Figma.</p>
           <button>#HTML</button>
           <button>#CSS</button>
           <button>#JavaScript</button>
           <button>#Figma</button>
-          <div class="imagen-section-proyectos">
-            <img src="./img/simulacion-1.svg" alt="simulacion-1">
-          </div>
+        </div>
+
+        <div>
+          <img src="./img/simulacion-2.svg" alt="simulacion-2">
+        </div>
+        <div class="content-info">
+        <h3>Landing Page - Consultora RRHH Inlcuisva</h3>
+        <p>Página web desarrollada  para cliente de una Consultora Inclusiva de RRHH. Armé diseño responsivo en Figma.</p>
+        <button>#HTML</button>
+        <button>#CSS</button>
+        <button>#JavaScript</button>
+        <button>#Figma</button>
+      </div>
         </div>
         
     <section class="section-sobre-mi">
