--- a/index.html
+++ b/index.html
@@ -158,7 +158,8 @@
         <button>#Figma</button>
       </div>
         </div>
-        
+    </section>
+
     <section class="section-sobre-mi">
       <div>
         <h1>Sobre MI</h1>
@@ -169,8 +170,7 @@
         </p>
       </div>
 
-      <div class="section-formacion">
-        <h1>Formación</h1>
+       <h1>Formación</h1>
         <div class="formacion-1">
           <div>
             <img src="./img/icono-egresado.svg" alt="egresado">
@@ -200,7 +200,6 @@
             <p>Marzo 2024 - Mayo 2024</p>
           </div>
         </div>
-      </div>
     </section>
 
     </main>
