cambios varios section proyectos ok

--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
         <button>Diseño Gráfico</button>
         <button>UI Design</button>
       </div>
-        <div class="section-proyectos-content">
-          <div>
-            <img src="./img/simulacion-1.svg" alt="simulacion-1">
+        <div class="section-proyectos-content">          
+          <div class="img-proyectos">
+            <img src="./img/simulacion-1.png" alt="simulacion-1">
           </div>
           <div class="content-info">
           <h3>Landing Page - Agencia de Diseño</h3>
@@ -147,7 +147,7 @@
         </div>
 
         <div>
-          <img src="./img/simulacion-2.svg" alt="simulacion-2">
+          <img src="./img/simulacion-2.png" alt="simulacion-2">
         </div>
         <div class="content-info">
         <h3>Landing Page - Consultora RRHH Inlcuisva</h3>
