cambios en seccion sobre mi / formacion

--- a/index.html
+++ b/index.html
@@ -171,32 +171,32 @@
       </div>
 
        <h1>Formación</h1>
-        <div class="formacion-1">
+        <div class="formacion">
           <div>
             <img src="./img/icono-egresado.svg" alt="egresado">
           </div>
-          <div>
-            <p>Técnico Superior en Diseño Gráfico y Publicitario - Instituto Manuel Belgrano</p>
+          <div class="texto-formacion">
+            <h4>Técnico Superior en Diseño Gráfico y Publicitario - Instituto Manuel Belgrano</p>
             <p>2003-2008</p>
           </div>
         </div>
 
-        <div class="formacion-2">
+        <div class="formacion">
           <div>
             <img src="./img/icono-egresado.svg" alt="egresado">
           </div>
-          <div>
-            <p>Diseño UI - Educación IT</p>
+          <div class="texto-formacion">
+            <h4>Diseño UI - Educación IT</p>
             <p>Mayo 2022 - Julio 2022</p>
           </div>
         </div>
 
-        <div class="formacion-3">
+        <div class="formacion">
           <div>
             <img src="./img/icono-egresado.svg" alt="egresado">
           </div>
-          <div>
-            <p>Maquetador Web - Educación IT</p>
+          <div class="texto-formacion">
+            <h4>Maquetador Web - Educación IT</p>
             <p>Marzo 2024 - Mayo 2024</p>
           </div>
         </div>
