--- a/index.html
+++ b/index.html
@@ -205,34 +205,46 @@
     </main>
 
     <footer>
-      <div id="contacto" class="footer-container">
-  
-        <div class="footer-contacto">
-          <h3>CONTACTO</h3>
-          <div class="contacto">
-            <span class="icon-whatsapp"></span>
-            <a class="contacto-a" href="">+54 9 261 651 4720</a>
+      <div id="contacto"class="footer-container">
+        <div class="grid-footer">
+          
+          <div class="footer-contacto">
+            <h3>CONTACTO</h3>
+            <div class="contacto">
+              <span class="icon-whatsapp"></span>
+              <a class="contacto-a" href="">+54 9 261 651 4720</a>
+            </div>
+
+            <div class="contacto">
+              <span class="icon-envelope"></span>
+              <a
+                class="contacto-a"
+                href="mailto:mpestudiodisenio@gmail.com"
+                target="_blank"
+                >mpestudiodisenio@gmail.com</a
+              >
+            </div>
           </div>
-  
-          <div class="contacto">
-            <span class="icon-envelope"></span>
-            <a class="contacto-a" href="mailto:info@cimaconsultora.com.ar" target="_blank">mpestudiodisenio@gmail.com</a>
+
+          <div class="redes">
+            <h3>REDES SOCIALES</h3>
+            <a
+              href="https://www.instagram.com/mpestudiodisenio/"
+              target="_blank"
+              ><span class="icon-instagram"></span
+            ></a>
+            <a
+              href="https://www.linkedin.com/in/maribelplaza/"
+              target="_blank"
+              ><span class="icon-linkedin"></span
+            ></a>
           </div>
         </div>
-  
-        <div class="redes">
-          <h3>MIS REDES</h3>
-          <a href="https://www.instagram.com/cima_consultora/profilecard/?igsh=MTZucTVxMWZ6Y21teQ%3D%3D"
-            target="_blank"><span class="icon-instagram"></span></a>
-          <a href="https://www.linkedin.com/company/cimaconsultora/about/" target="_blank"><span
-              class="icon-linkedin"></span></a>
+
+        <div class="derechos">
+          <p>@Todos los derechos reservados.</p>
+          <a href="https://wa.me/5492616514720" target="_blank">Creada por MP Diseño</a>
         </div>
-      </div>
-  
-      <div class="derechos">
-        <p>@Todos los derechos reservados. Imagenes Freepik / Pexels</p>
-        <a href="https://wa.me/5492616514720" target="_blank">Creada por MP Diseño</a>
-      </div>
       </div>
     </footer>
 
