--- a/index.html
+++ b/index.html
@@ -67,11 +67,18 @@
               Me especializo en crear experiencias digitales atractivas y funcionales, uniendo diseño y tecnología en
               proyectos de diseño web.</p>
             <div class="buttons">
-              <img src="./img/logo-figma.negro.svg" alt="logo-figma">
-              <img src="./img/logoGithub.svg" alt="logo-github">
-              <img src="./img/logoBehance.svg" alt="logo-behance">
-              <img src="./img/logoMail.svg" alt="mail">
-            </div>
+              <a href="https://github.com/Maribel-17" target="_blank" rel="noopener noreferrer">
+                <img src="./img/logoGithub.svg" alt="GitHub">
+              </a>
+
+              <a href="https://www.behance.net/mpestudio" target="_blank" rel="noopener noreferrer">
+                <img src="./img/logoBehance.svg" alt="Behance">
+            </a>
+
+            <a href="mailto:mpestudiodisenio@gmail.com" target="_blank" rel="noopener noreferrer">
+              <img src="./img/logoMail.svg" alt="Email">
+          </a>
+          </div>
           </div>
         </div>
       </div>
@@ -161,7 +168,7 @@
     </section>
 
     <section class="section-sobre-mi">
-      <div>
+      <div class="info">
         <h1>Sobre MI</h1>
         <p>Hola, soy Maribel, Diseñadora Gráfica, UI Designer y Desarrolladora Frontend. Con experiencia en diseño
           visual y en la creación de interfaces atractivas, me especializo en el desarrollo de sitios web responsivos y
@@ -170,6 +177,7 @@
         </p>
       </div>
 
+      <div class="container-formacion">
        <h1>Formación</h1>
         <div class="formacion">
           <div>
@@ -200,6 +208,7 @@
             <p>Marzo 2024 - Mayo 2024</p>
           </div>
         </div>
+      </div>
     </section>
 
     </main>
@@ -210,6 +219,7 @@
           
           <div class="footer-contacto">
             <h3>CONTACTO</h3>
+            <p>Estoy disponible para nuevos proyectos. Contacta conmigo por email, whatsapp o sígueme en mis redes sociales.</p>
             <div class="contacto">
               <span class="icon-whatsapp"></span>
               <a class="contacto-a" href="">+54 9 261 651 4720</a>
