cambios en nav/header e index

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
             <li><a href="#sobreMi">Sobre Mi</a></li>
             <li><a href="#contacto">Contacto</a></li>
           </ul>
-          <button class="download-button">
-          Download CV
-          <img src="./img/icon-download.svg" alt="Download Icon" class="iconDownload" />
-        </button>
+
+          <a href="https://drive.google.com/file/d/1z1SMpGVpFugOt65TbxKk59TKaiDve-Dl/view?usp=drive_link" class="btn">
+            Download CV <img src="./img/icon-download.svg" alt="Descargar CV">
+        </a>
         </nav>
       </div>
     </header>
@@ -84,7 +84,7 @@
       </div>
       </section>
 
-      <section class="section-skills">
+      <section id="skills" class="section-skills">
         <div>
           <img class="titulo-skills" alt="titulo Skills">
         </div>
@@ -133,7 +133,7 @@
           </div>
       </section>
 
-      <section class="section-proyectos">
+      <section id="proyectos" class="section-proyectos">
         <h1>Proyectos</h1>
         <div class="content-buttons">
         <button>Desarrollo Front End</button>
@@ -167,7 +167,7 @@
         </div>
     </section>
 
-    <section class="section-sobre-mi">
+    <section id="sobreMi" class="section-sobre-mi">
       <div class="info">
         <h1>Sobre MI</h1>
         <p>Hola, soy Maribel, Diseñadora Gráfica, UI Designer y Desarrolladora Frontend. Con experiencia en diseño
