--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <main>
       <div class="wrapper">
       <section id="inicio" class="section-inicio">
+        <div class="div-inicio">
           <div>
             <img class="imagen-section-inicio" src="./img/imagenMujerConPc.svg" alt="imagenMujerConPc">
           </div>
@@ -82,7 +83,8 @@
           </div>
         </div>
       </div>
-      </section>
+        </div>
+    </section>
 
       <section id="skills" class="section-skills">
         <div>
