animacion titulo section skills

--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
     </section>
 
       <section id="skills" class="section-skills">
-        <div>
+        <div class="titulo-skills-wrapper">
+          <img class="titulo-skills" alt="titulo Skills">
           <img class="titulo-skills" alt="titulo Skills">
         </div>
   
