arreglos seccion sobreMi

--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
 
       <div class="container-formacion">
        <h1>Formación</h1>
+       <div class="container-formaciones">
         <div class="formacion">
           <div>
             <img src="./img/icono-egresado.svg" alt="egresado">
@@ -221,6 +222,9 @@
             <p>Marzo 2024 - Mayo 2024</p>
           </div>
         </div>
+
+       </div>
+        
       </div>
     </section>
 
