--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
                 <img src="./img/logoBehance.svg" alt="Behance">
             </a>
 
+          <a href="https://www.linkedin.com/in/maribelplaza/" target="_blank" rel="noopener noreferrer">
+              <img src="./img/icon-Linkedin.svg" alt="Linkedin">
+          </a>
+
             <a href="mailto:mpestudiodisenio@gmail.com" target="_blank" rel="noopener noreferrer">
               <img src="./img/logoMail.svg" alt="Email">
           </a>
