agregar videos en seccion proyectos

--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
         <div class="section-proyectos-content">
           
           <div class="proyecto">
-            <div class="img-proyectos">
-              <img src="./img/simulacion-1.png" alt="simulacion-1">
+            <div class="video-proyectos">
+              <video src="./img/Video Landing Agencia.mp4" autoplay loop></video>
             </div>
             <div class="content-info">
               <h3>Landing Page - Agencia de Diseño</h3>
@@ -166,8 +166,8 @@
           </div>
           
           <div class="proyecto">
-            <div class="img-proyectos">
-              <img src="./img/simulacion-2.png" alt="simulacion-2">
+            <div class="video-proyectos">
+              <video src="./img/Video Cima Consultora.mp4" autoplay loop></video>
             </div>
             <div class="content-info">
               <h3>Landing Page - Consultora RRHH Inclusiva</h3>
