arreglos en section proyectos

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <li><a href="#contacto">Contacto</a></li>
           </ul>
 
-          <a href="https://drive.google.com/file/d/1z1SMpGVpFugOt65TbxKk59TKaiDve-Dl/view?usp=drive_link" class="btn">
+          <a href="https://drive.google.com/file/d/1g8fWIg1NiZqqUb3LWhAadG70I8xUEpIz/view?usp=sharing" target="_blank" class="btn">
             Download CV <img src="./img/icon-download.svg" alt="Descargar CV">
         </a>
         </nav>
@@ -143,14 +143,14 @@
       <section id="proyectos" class="section-proyectos">
         <h1>Proyectos</h1>
         <div class="content-buttons">
-          <button>Desarrollo Front End</button>
-          <button>Diseño Gráfico</button>
-          <button>UI Design</button>
+          <a href="#video-proyectos">Desarrollo Front End</a>
+          <a href="https://www.behance.net/mpestudio" target="_blank">Diseño Gráfico</a>
+          <a href="https://www.behance.net/mpestudio" target="_blank">UI Design</a>
         </div>
         <div class="section-proyectos-content">
           
           <div class="proyecto">
-            <div class="video-proyectos">
+            <div id="video-proyectos" class="video-proyectos">
               <video src="./img/Video Landing Agencia.mp4" autoplay loop></video>
             </div>
             <div class="content-info">
