--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
             <p>Estoy disponible para nuevos proyectos. Contacta conmigo por email, whatsapp o sígueme en mis redes sociales.</p>
             <div class="contacto">
               <span class="icon-whatsapp"></span>
-              <a class="contacto-a" href="">+54 9 261 651 4720</a>
+              <a class="contacto-a" href="https://wa.link/a6mx0n" target="_blank">+54 9 261 651 4720</a>
             </div>
 
             <div class="contacto">
