optimization html y cambios en css varios

--- a/index.html
+++ b/index.html
@@ -9,11 +9,6 @@
     />
     <title>Maribel Plaza</title>
     <link rel="shortcut icon" href="./img/ICO MP.png" />
-    <link
-      rel="preload"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
-      as="style"
-    />
     <link rel="stylesheet" href="./css/styleIco.css"/>
     <link rel="stylesheet" href="./css/style.css"/>
     <link rel="stylesheet" href="./css/header.css"/>
@@ -151,7 +146,7 @@
           
           <div class="proyecto">
             <div id="video-proyectos" class="video-proyectos">
-              <video src="./img/Video Landing Agencia.mp4" autoplay loop></video>
+              <video src="./img/Video Landing Agencia.mp4" poster="imagen.jpg" autoplay loop></video>
             </div>
             <div class="content-info">
               <h3>Landing Page - Agencia de Diseño</h3>
@@ -167,7 +162,7 @@
           
           <div class="proyecto">
             <div class="video-proyectos">
-              <video src="./img/Video Cima Consultora.mp4" autoplay loop></video>
+              <video src="./img/Video Cima Consultora.mp4" poster="imagen.jpg" autoplay loop></video>
             </div>
             <div class="content-info">
               <h3>Landing Page - Consultora RRHH Inclusiva</h3>
@@ -202,7 +197,7 @@
             <img src="./img/icono-egresado.svg" alt="egresado">
           </div>
           <div class="texto-formacion">
-            <h4>Técnico Superior en Diseño Gráfico y Publicitario - Instituto Manuel Belgrano</p>
+            <h4>Técnico Superior en Diseño Gráfico y Publicitario - Instituto Manuel Belgrano</h4>
             <p>2003-2008</p>
           </div>
         </div>
@@ -279,6 +274,6 @@
       </div>
     </footer>
 
-    <script src="./js/main.js"></script>
+    <script src="./js/main.js" defer></script>
   </body>
 </html>
