--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <body>
     <header>
-      <div class="wrapper header">
+      <div class="wrapper-header">
         <img class="logo" src="./img/ICO MP.png" alt="logo MP DISEÑO"/>
         <span id="abrir" class="icon-menu"></span>
         <nav id="menu" class="menu">
