--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="CIMA, consultora en inclusión laboral de personas con discapacidad. Servicios para empresas y candidatos."
+      content="Maribel Plaza, Diseñadora Gráfica, UI Designer y Desarrolladora Frontend."
     />
     <title>Maribel Plaza</title>
     <link rel="shortcut icon" href="./img/ICO MP.png" />
