--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <li><a href="#sobreMi">Sobre Mi</a></li>
             <li><a href="#contacto">Contacto</a></li>
           </ul>
-          <a href="https://drive.google.com/file/d/1g8fWIg1NiZqqUb3LWhAadG70I8xUEpIz/view?usp=sharing" target="_blank" class="btn">
+          <a href="https://drive.google.com/file/d/1pYfeF1c_l4jysw2kDIikntKD0DEXaKXU/view?usp=sharing" target="_blank" class="btn">
             Download CV <img src="./img/icon-download.svg" alt="Descargar CV">
         </a>
         </nav>
@@ -62,21 +62,20 @@
               Me especializo en crear experiencias digitales atractivas y funcionales, uniendo diseño y tecnología en
               proyectos de diseño web.</p>
             <div class="buttons">
-              <a href="https://github.com/Maribel-17" target="_blank" rel="noopener noreferrer">
+              <a href="https://www.linkedin.com/in/maribelplaza/" target="_blank" rel="noopener noreferrer">
+                <img src="./img/icon-Linkedin.svg" alt="Linkedin">
+            </a>
+              <a href="https://github.com/Maribel-17?tab=repositories" target="_blank" rel="noopener noreferrer">
                 <img src="./img/logoGithub.svg" alt="GitHub">
               </a>
 
               <a href="https://www.behance.net/mpestudio" target="_blank" rel="noopener noreferrer">
                 <img src="./img/logoBehance.svg" alt="Behance">
             </a>
-
-          <a href="https://www.linkedin.com/in/maribelplaza/" target="_blank" rel="noopener noreferrer">
-              <img src="./img/icon-Linkedin.svg" alt="Linkedin">
-          </a>
-
-            <a href="mailto:mpestudiodisenio@gmail.com" target="_blank" rel="noopener noreferrer">
+       
+            <!-- <a href="mailto:mpestudiodisenio@gmail.com" target="_blank" rel="noopener noreferrer">
               <img src="./img/logoMail.svg" alt="Email">
-          </a>
+          </a> -->
           </div>
           </div>
         </div>
@@ -150,10 +149,10 @@
           
           <div class="proyecto">
             <div id="video-proyectos" class="video-proyectos">
-              <video src="./media/VideoLandingAgencia.mp4" poster="imagen.jpg" autoplay loop></video>
-            </div>
+              <video src="./media/VideoLandingAgencia.mp4" poster="imagen.jpg" autoplay loop ></video>
+            </div>  
             <div class="content-info">
-              <h3>Landing Page - Agencia de Diseño</h3>
+              <a href="https://maribel-17.github.io/LandingAgencia/" target="_blank">Landing Page - Agencia de Diseño</a>
               <p>Página web desarrollada como práctica de diseño y funcionalidad. Usando una plantilla de Figma.</p>
               <div class="tags">
                 <button>#HTML</button>
@@ -169,7 +168,7 @@
               <video src="./media/VideoCimaConsultora.mp4" poster="imagen.jpg" autoplay loop></video>
             </div>
             <div class="content-info">
-              <h3>Landing Page - Consultora RRHH Inclusiva</h3>
+              <a href="https://cimaconsultora.com.ar/" target="_blank">Landing Page - Consultora RRHH Inclusiva</a>
               <p>Página web desarrollada para cliente de una Consultora Inclusiva de RRHH. Armé diseño responsivo en Figma.</p>
               <div class="tags">
                 <button>#HTML</button>
