cambios en section proyectos, js e index

--- a/index.html
+++ b/index.html
@@ -149,7 +149,8 @@
           
           <div class="proyecto">
             <div id="video-proyectos" class="video-proyectos">
-              <video src="./media/VideoLandingAgencia.mp4" poster="imagen.jpg" autoplay loop ></video>
+              <div class="loader"></div>
+              <video class="hidden" controls><source src="./media/VideoLandingAgencia.mp4" poster="../PortfolioMP/img/portadaLandingAgencia.JPG" type="video/mp4"></video>
             </div>  
             <div class="content-info">
               <a href="https://maribel-17.github.io/LandingAgencia/" target="_blank">Landing Page - Agencia de Diseño</a>
@@ -164,8 +165,9 @@
           </div>
           
           <div class="proyecto">
-            <div class="video-proyectos">
-              <video src="./media/VideoCimaConsultora.mp4" poster="imagen.jpg" autoplay loop></video>
+            <div id="video-proyectos" class="video-proyectos">
+              <div class="loader"></div>
+              <video class="hidden" controls><source src="./media/VideoCimaConsultora.mp4" poster="./img/portadaLandingCima.JPG" type="video/mp4"></video>
             </div>
             <div class="content-info">
               <a href="https://cimaconsultora.com.ar/" target="_blank">Landing Page - Consultora RRHH Inclusiva</a>
