cambio de palabra download por descargar

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <li><a href="#contacto">Contacto</a></li>
           </ul>
           <a href="https://drive.google.com/file/d/19VjxWi8Yuv3TeG2GGQTrg-DwYQOzpZbg/view?usp=sharing" target="_blank" class="btn">
-            Download CV <img src="./img/icon-download.svg" alt="Descargar CV">
+            Descargar CV <img src="./img/icon-download.svg" alt="Descargar CV">
         </a>
         </nav>
       </div>
